--- a/p1.css
+++ b/p1.css
@@ -9,7 +9,50 @@
     place-items: center;
     background-color: #ffffff;
   }
+
+  #ctre1,#ctre2,#ctre3,#ctre4,#ctre5,#ctre6,#ctre7,#ctre8,#ctre9,#ctre10 {
+    height: 50px;
+    width: 5px;
+    padding-left: 10px;
+  }
+
+  #ctre1 {
+    background-color: #ffb950;
+  }
+  #ctre2 {
+    background-color: #ffad33;
+  }
+  #ctre3 {
+    background-color: #ff931f;
+  }
+  #ctre4 {
+    background-color: #ff7e33;
+  }
+  #ctre5 {
+    background-color: #fa5e1f;
+  }
+  #ctre6 {
+    background-color: #ec3f13;
+  }
+  #ctre7 {
+    background-color: #b81702;
+  }
+  #ctre8 {
+    background-color: #a50104;
+  }
+  #ctre9 {
+    background-color: #8e0103;
+  }
+  #ctre10 {
+    background-color: #7a0103;
+  }
   
+
+  input[type='checkbox'] {
+    padding: 590px;
+    padding-left:10px;
+  }
+
   h1 {
     background-color: #ffffff;
     color: #000000;
@@ -17,6 +60,18 @@
     white-space:pre-wrap;
     line-height : 24px;
     font-size: 18px;
+    font-family:arial, sans-serif;
+    padding: 5px;
+    padding-left:0px;
+  }
+
+  h2 {
+    background-color: #ffffff;
+    color: #000000;
+    display:inline;
+    white-space:pre-wrap;
+    line-height : 24px;
+    font-size: 17px;
     font-family:arial, sans-serif;
     padding: 5px;
     padding-left:0px;
